force-app/main/default/objects/Drug__c/Drug__c.object-meta.xml
<CustomObject>
    <description>Stores master information about medications available in the organization, including identification details and regulatory attributes. Each drug can have multiple manufacturing batches.</description>
    <label>Drug</label>
    <nameField>
        <label>Drug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drug</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>