force-app/main/default/objects/Drug__c/fields/Controlled_Substance__c.field-meta.xml
<CustomField>
    <fullName>Controlled_Substance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Controlled Substance</label>
    <type>Checkbox</type>
</CustomField>