force-app/main/default/objects/Drug__c/fields/Dosage_Form__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Form__c</fullName>
    <label>Dosage Form</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Capsule</fullName>
            </value>
            <value>
                <fullName>Injection</fullName>
            </value>
            <value>
                <fullName>Syrup</fullName>
            </value>
            <value>
                <fullName>Cream</fullName>
            </value>
            <value>
                <fullName>Inhaler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>