force-app/main/default/objects/Drug__c/fields/Drug_Category__c.field-meta.xml
<CustomField>
    <fullName>Drug_Category__c</fullName>
    <label>Drug Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Analgesic</fullName>
            </value>
            <value>
                <fullName>Analgesics</fullName>
            </value>
            <value>
                <fullName>Antibiotic</fullName>
            </value>
            <value>
                <fullName>Antibiotics</fullName>
            </value>
            <value>
                <fullName>Antidepressants</fullName>
            </value>
            <value>
                <fullName>Antidiabetics</fullName>
            </value>
            <value>
                <fullName>Antihistamines</fullName>
            </value>
            <value>
                <fullName>Antihypertensives</fullName>
            </value>
            <value>
                <fullName>Vaccine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>