force-app/main/default/objects/Drug__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pfizer</fullName>
            </value>
            <value>
                <fullName>Johnson &amp; Johnson (J&amp;J)</fullName>
            </value>
            <value>
                <fullName>Novartis</fullName>
            </value>
            <value>
                <fullName>Merck &amp; Co. (MSD)</fullName>
            </value>
            <value>
                <fullName>Roche</fullName>
            </value>
            <value>
                <fullName>AbbVie</fullName>
            </value>
            <value>
                <fullName>AstraZeneca</fullName>
            </value>
            <value>
                <fullName>Sanofi</fullName>
            </value>
            <value>
                <fullName>GlaxoSmithKline (GSK)</fullName>
            </value>
            <value>
                <fullName>Eli Lilly</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>