force-app/main/default/objects/Drug__c/fields/NDC_Code__c.field-meta.xml
<CustomField>
    <fullName>NDC_Code__c</fullName>
    <label>NDC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>