force-app/main/default/objects/Drug__c/fields/Other_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Other_Manufacturer__c</fullName>
    <label>Other Manufacturer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>