force-app/main/default/objects/Drug__c/fields/Strength__c.field-meta.xml
<CustomField>
    <fullName>Strength__c</fullName>
    <inlineHelpText>Example: 500 mg, 10 mg/ml</inlineHelpText>
    <label>Strength</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 mg/mL</fullName>
            </value>
            <value>
                <fullName>2 mg/mL</fullName>
            </value>
            <value>
                <fullName>5 mg/mL</fullName>
            </value>
            <value>
                <fullName>10 mg/mL</fullName>
            </value>
            <value>
                <fullName>25 mg/mL</fullName>
            </value>
            <value>
                <fullName>50 mg/mL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>