force-app/main/default/objects/Drug__c/fields/Total_Active_Quantities__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Quantities__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Active Quantities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>