force-app/main/default/objects/Drug__c/validationRules/OtherManufacturerValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherManufacturerValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Manufacturer__c , &quot;Other&quot;), ISBLANK( Other_Manufacturer__c))</errorConditionFormula>
    <errorMessage>Please fill in Other Manufacturer when Manufacturer is set to Other.</errorMessage>
</ValidationRule>