force-app/main/default/objects/Drug__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NDC_Code__c</columns>
    <columns>Controlled_Substance__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>